@@ -104,11 +104,11 @@
          (if (EQ L 0) (GO READLOOP))
          (setq PSLOC SLOC)
          (setq I 0 INSTRING () PCOUNT 0)
- STRLOOP (setq STRSYM (OR (position #\" A :start I ) L))
+ STRLOOP (setq STRSYM (OR (|findChar| #\" A I) L))
          (setq COMSYM (OR (search "--" A :start2 I ) L))
          (setq NCOMSYM (OR (search "++" A :start2 I ) L))
-         (setq OPARSYM (OR (position #\( A :start I ) L))
-         (setq CPARSYM (OR (position #\) A :start I ) L))
+         (setq OPARSYM (OR (|findChar| #\( A I) L))
+         (setq CPARSYM (OR (|findChar| #\) A I) L))
          (setq N (MIN STRSYM COMSYM NCOMSYM OPARSYM CPARSYM))
          (cond ((= N L) (GO NOCOMS))
                ((|escaped?| A N))
